--- a/src/env.example
+++ b/src/env.example
@@ -6,23 +6,27 @@ LIVEKIT_API_SECRET=
 # General Model Settings
 LLM_MODEL=gpt-4o-mini
 LLM_TEMPERATURE=0.2
+LLM_PROMPT=prompt.txt
+
+# SQL Lite Settings
+DEMO_DATABASE=chinook.db
 
 # Azure OpenAI Settings
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_ENDPOINT=
-OPENAI_API_VERSION=2024-02-01
+OPENAI_API_VERSION=
+OPENAI_API_KEY=Not Used
 
 # Azure Speech Settings
 AZURE_SPEECH_KEY=
 AZURE_SPEECH_REGION=
-
-# Do not remove the following line (bug in livekit library)
-OPENAI_API_KEY=
+TTS_VOICE=en-US-AmandaMultilingualNeural
 
 # Bing Search
 BING_API_KEY=
 
-# Azure Cognitive Search
+# AI Search
 AZURE_SEARCH_ENDPOINT=
 AZURE_SEARCH_API_KEY=
 AZURE_SEARCH_INDEX_NAME=
+TEXT_EMBEDDING_MODEL=text-embedding-3-small
